--- a/hyprland.conf
+++ b/hyprland.conf
@@ -29,7 +29,7 @@ monitor=,2880x1800@90,auto,1.5
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+#$menu = wofi --show drun
 
 
 #################
@@ -105,7 +105,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 0.95
-    inactive_opacity = 0.95
+    inactive_opacity = 0.7
 
     shadow {
         enabled = true
@@ -117,8 +117,8 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 5
+        passes = 2
 
         vibrancy = 0.1696
     }
@@ -140,9 +140,9 @@ animations {
     #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
     animation = global,        1,     10,    default
     animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,       1,     4.79,  easeOutQuint
-    animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
-    animation = windowsOut,    1,     1.49,  linear,       popin 87%
+    animation = windows,       1,     4.79,  easeOutQuint, slide
+    animation = windowsIn,     1,     4.1,   easeOutQuint, slide 
+    animation = windowsOut,    1,     1.49,  quick,slide 
     animation = fadeIn,        1,     1.73,  almostLinear
     animation = fadeOut,       1,     1.46,  almostLinear
     animation = fade,          1,     3.03,  quick
@@ -151,9 +151,9 @@ animations {
     animation = layersOut,     1,     1.5,   linear,       fade
     animation = fadeLayersIn,  1,     1.79,  almostLinear
     animation = fadeLayersOut, 1,     1.39,  almostLinear
-    animation = workspaces,    1,     1.94,  almostLinear, fade
-    animation = workspacesIn,  1,     1.21,  almostLinear, fade
-    animation = workspacesOut, 1,     1.94,  almostLinear, fade
+    animation = workspaces,    1,     1.94,  almostLinear, slidefade
+    animation = workspacesIn,  1,     1.94,  almostLinear, slidevert
+    animation = workspacesOut, 1,     1.94,  almostLinear, slidefade
     animation = zoomFactor,    1,     7,     quick
 }
 
@@ -191,10 +191,10 @@ misc {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = us
-    kb_variant =
+    kb_layout = us,br
+    kb_variant =,abnt2
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -202,7 +202,7 @@ input {
     sensitivity = 0.5 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
@@ -264,6 +264,12 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# Reposition active window on workspace
+bind = $mainMod SHIFT, H, swapwindow, l
+bind = $mainMod SHIFT, L, swapwindow, r
+bind = $mainMod SHIFT, K, swapwindow, u
+bind = $mainMod SHIFT, J, swapwindow, d
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
