--- a/hyprland.conf
+++ b/hyprland.conf
@@ -135,14 +135,16 @@ animations {
     bezier = linear,         0,    0,    1,    1
     bezier = almostLinear,   0.5,  0.5,  0.75, 1
     bezier = quick,          0.15, 0,    0.1,  1
+    bezier = custom1,        0,    1,     0, 1.05
+    bezier = custom2,        0,  1.1,     0, 1.05  
 
     # Default animations, see https://wiki.hypr.land/Configuring/Animations/
     #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
     animation = global,        1,     10,    default
     animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,       1,     4.79,  easeOutQuint, slide
-    animation = windowsIn,     1,     4.1,   easeOutQuint, slide 
-    animation = windowsOut,    1,     1.49,  quick,slide 
+    animation = windows,       1,        4,  custom2, slide
+    animation = windowsIn,     1,        4,  custom1, popin 88% 
+    animation = windowsOut,    1,        4,  custom1, slide 
     animation = fadeIn,        1,     1.73,  almostLinear
     animation = fadeOut,       1,     1.46,  almostLinear
     animation = fade,          1,     3.03,  quick
@@ -151,7 +153,7 @@ animations {
     animation = layersOut,     1,     1.5,   linear,       fade
     animation = fadeLayersIn,  1,     1.79,  almostLinear
     animation = fadeLayersOut, 1,     1.39,  almostLinear
-    animation = workspaces,    1,     1.94,  almostLinear, slidefade
+    animation = workspaces,    1,     3,     linear      , slide
     animation = workspacesIn,  1,     1.94,  almostLinear, slidevert
     animation = workspacesOut, 1,     1.94,  almostLinear, slidefade
     animation = zoomFactor,    1,     7,     quick
@@ -296,6 +298,11 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# Power Profiles
+bind = $mainMod, backslash, exec, powerprofilesctl set power-saver && notify-send "Power profile" "Power saver" 
+bind = $mainMod, bracketright, exec, powerprofilesctl set balanced  && notify-send "Power profile" "Balanced" 
+bind = $mainMod, bracketleft, exec, powerprofilesctl set performance && notify-send "Power profile" "Performance" 
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
