--- a/hyprland.conf
+++ b/hyprland.conf
@@ -17,7 +17,14 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,2880x1800@90,auto,1.5
+# Notebook monitor
+monitor=eDP-1,2880x1800@90,0x0,1.5
+
+# Concordia monitor 144hz
+monitor=HDMI-A-1, 1920x1080@144, 1920x0, 1
+
+# Random monitor
+monitor=,preferred,auto,1, mirror, eDP-1 
 
 
 ###################
@@ -53,7 +60,7 @@ exec-once = qs -c noctalia-shell
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
+env = HYPRSHOT_DIR,Pictures/Screenshots
 
 ###################
 ### PERMISSIONS ###
@@ -183,7 +190,7 @@ master {
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -206,6 +213,15 @@ input {
     touchpad {
         natural_scroll = true
     }
+	
+    
+}
+
+
+# Configuração específica para o Teclado Externo
+device {
+    name = keychron-keychron-c1
+    kb_layout = us # Ou br, dependendo do seu Keychron
 }
 
 # See https://wiki.hypr.land/Configuring/Gestures
@@ -303,6 +319,11 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 bind = $mainMod, backslash, exec, powerprofilesctl set power-saver && notify-send "Power profile" "Power saver" 
 bind = $mainMod, bracketright, exec, powerprofilesctl set balanced  && notify-send "Power profile" "Balanced" 
 bind = $mainMod, bracketleft, exec, powerprofilesctl set performance && notify-send "Power profile" "Performance" 
+
+# Screenshot service binding
+bind = , PRINT, exec, hyprshot -m output
+bind = $mainMod, PRINT, exec, hyprshot -m region
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
