--- a/hyprland.conf
+++ b/hyprland.conf
@@ -93,7 +93,7 @@ general {
     border_size = 1
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgb(7aa2f7) rgb(565f89) 90deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -218,10 +218,11 @@ input {
 }
 
 
-# Configuração específica para o Teclado Externo
+# Specific config for external kb
 device {
     name = keychron-keychron-c1
-    kb_layout = us # Ou br, dependendo do seu Keychron
+    kb_layout = us,br 
+    kb_variant =,abnt2
 }
 
 # See https://wiki.hypr.land/Configuring/Gestures
@@ -230,8 +231,9 @@ gesture = 3, horizontal, workspace
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.8
+    name = logi-m196-mouse
+    sensitivity = 0.2
+    accel_profile = flat
 }
 
 
